--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 		<li><a href="https://xem.github.io/miniMusic">Mini Music</a> - draw a melody with your mouse, choose the tempo, volume and base note, then export it as a super short JS code</li>
 		<li><a href="https://xem.github.io/miniOrchestra/ ">Mini Orchestra</a> - same, with more options and many instruments at once</li>
 		<li><a href="https://xem.github.io/js1k19/miniSynth/">Mini Synth</a> - 1kb piano/guitar synth</li>
+		<li><a href="https://vertfromage.github.io/miniPiano/pianoPlayback.html">Piano Playback ⇧</a> - Forked xem, tool to make sequence of notes to play in game.</li>
 		<li><a href="https://xem.github.io/alphabet-piano/">Alphabet-piano</a> - Melody from an ASCII string</li>
 		<li><a href="https://xem.github.io/MiniSoundEditor/">Mini Sound Editor</a> - Sound effects editor and tiny JS player, plus a list of examples</li>
 		<li><a href="https://github.com/xem/GameAudioBundleMP3">Game Audio Bundle</a> - Free Sound effects compressed in .mp3 (there's a folder with all that are &lt; 13kb)</li>
