Added dev diaries for my entries to JS13k 2021

--- a/index.html
+++ b/index.html
@@ -418,7 +418,8 @@
 		</li>
 		<li class="posts" id="posts2021"><strong>2021 post-mortems:</strong>
 			<ul>
-				<li>Soon</li>
+				<li><a href="https://github.com/picosonic/js13k-2021-mobile/blob/main/devdiary/diary.md">Crater Space</a> by picosonic (Jasper Renow-Clarke) <a href="https://twitter.com/femtosonic">@femtosonic</a></li>
+				<li><a href="https://github.com/picosonic/js13k-2021/blob/main/devdiary/diary.md">Airspace Alpha Zulu</a> by picosonic (Jasper Renow-Clarke) <a href="https://twitter.com/femtosonic">@femtosonic</a></li>
 			</ul>
 		</li>
 	</ul>
