--- a/index.html
+++ b/index.html
@@ -421,6 +421,7 @@
 				<li><a href="https://github.com/picosonic/js13k-2021-mobile/blob/main/devdiary/diary.md">Crater Space</a> by picosonic (Jasper Renow-Clarke) <a href="https://twitter.com/femtosonic">@femtosonic</a></li>
 				<li><a href="https://github.com/picosonic/js13k-2021/blob/main/devdiary/diary.md">Airspace Alpha Zulu</a> by picosonic (Jasper Renow-Clarke) <a href="https://twitter.com/femtosonic">@femtosonic</a></li>
 				<li><a href="https://github.com/elliot-nelson/js13k-2021-keening-star/blob/main/README.md#post-mortem">Shadow of the Keening Star</a> by Elliot Nelson <a href="https://twitter.com/7tonshark">@7tonshark</a></li>
+				<li><a href="https://dev.to/felladrin/cat-goric-escape-from-the-warp-chamber-post-mortem-57gc">Cat Goric: Escape from the Warp Chamber - Post-Mortem</a> by Victor Nogueira <a href="https://twitter.com/felladrin">@felladrin</a></li>
 			</ul>
 		</li>
 	</ul>
