Roadroller, Lee, Yupi, Q1K3

--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
 		<li><a href="https://github.com/xem/miniMinifier/">miniMinifier</a> - tiny (but super efficient) HTML and CSS minifiers</li>
 		<li><a href="https://xem.github.io/int2binary2html/">int2binary2html</a> - helps you to encode a long list of integers (0-255) in binary and embed it in your index.html</li>
 		<li><a href="https://xem.github.io/int2unicode/">Int2Unicode</a> - Convert a list of integers into a JS string</li>
+		<li><a href="https://lifthrasiir.github.io/roadroller/">Roadroller</a> - flattens your JavaScript demo</li>
 	</ul>
 
 	<h3 id="aframe">WebXR resources</h3>
@@ -215,6 +216,7 @@
 		<li><a href="https://xem.github.io/mini2DPlatformer/">Mini 2D platformer</a> - 2D platformer demo with commented source code</li>
 		<li><a href="https://github.com/xem/mini3DPlatformer#readme">Mini 3D platformer</a> - 3D platformer demos with commented source code</li>
 		<li><a href="https://twitter.com/MaximeEuziere/status/1416651465951690753">JS13k 2021 tools &amp; tips thread</a> - by xem</li>
+		<li><a href="https://dev.to/github/build-a-tiny-game-for-js13k-with-kontra-js-8pb">Build a tiny game for JS13K with Kontra.js</a> - by Lee Reilly</li>
 	</ul>
 
 	<h3 id="vids">Videos and audio</h3>
@@ -231,6 +233,7 @@
 		<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85cuGNo8x74zv6U1ojTYjzRh">Jupi Plays Indie Games 2019</a> - YouTube playlist for 2019 entries by Jupiter Hadley</li>
 		<li><a href="https://cinnamon.video/watch?v=494735965722510880">js13kGames 2020: showcase of Web Monetization category entries</a> by Jupiter Hadley</li>
 		<li><a href="https://www.youtube.com/watch?v=GKOgm5-GbUA">20 award-winning 13-kilobyte JavaScript games - js13kGames 2020 winners</a> by Ania Kubów for freeCodeCamp</li>
+		<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85fITmDh5Akb_AvQ7mk84SVb">Jupi Plays Indie Games 2021</a> - YouTube playlist for 2021 entries by Jupiter Hadley</li>
 	</ul>
 
 	<h3 id="posts">Blog posts and post mortems</h3>
@@ -416,6 +419,9 @@
 				<li><a href="https://github.com/jaammees/exit">Exit postmortem</a> (webxr category) - by <a href="https://twitter.com/uniquename654">James</a></li>
 			</ul>
 		</li>
+		<li><a href="https://kotaku.com/wow-this-quake-clone-is-smaller-than-a-word-doc-1847668782">Wow, this Quake clone is smaller than a Word doc</a> - by Zack Zwiezen at Kotaku</li>
+		<li><a href="https://www.techspot.com/news/91246-quake-clone-13-kilobytes-plays-right-browser.html">This Quake clone is just 13 kilobytes and plays right in your browser</a> - by Shawn Knight at TechSpot</li>
+		<li><a href="https://www.quakewiki.net/q1k3-a-javascript-homage-to-quake-in-just-13kb/">Q1K3: a JavaScript homage to Quake in Just 13KB</a> - QuakeWiki</li>
 		<li class="posts" id="posts2021"><strong>2021 post-mortems:</strong>
 			<ul>
 				<li><a href="https://github.com/picosonic/js13k-2021-mobile/blob/main/devdiary/diary.md">Crater Space</a> by picosonic (Jasper Renow-Clarke) <a href="https://twitter.com/femtosonic">@femtosonic</a></li>
