--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
 		<li><a href="https://cinnamon.video/watch?v=494735965722510880">js13kGames 2020: showcase of Web Monetization category entries</a> by Jupiter Hadley</li>
 		<li><a href="https://www.youtube.com/watch?v=GKOgm5-GbUA">20 award-winning 13-kilobyte JavaScript games - js13kGames 2020 winners</a> by Ania Kubów for freeCodeCamp</li>
 		<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85fITmDh5Akb_AvQ7mk84SVb">Jupi Plays Indie Games 2021</a> - YouTube playlist for 2021 entries by Jupiter Hadley</li>
+		<li><a href="https://www.youtube.com/playlist?list=PLhL-75WW1siuO5voVWa3qnBhGlZ1aXtf-">Playing js13kGames 2021 game jam entries</a> - YouTube playlist for 2021 entries by Pablo_TescoSpar</li>
 	</ul>
 
 	<h3 id="posts">Blog posts and post mortems</h3>
