--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
 	<h3 id="engine">Micro game engines and boilerplates</h3>
 	<ul>
+		<li><a href="https://github.com/KilledByAPixel/LittleJS">LittleJS</a> - lightweight 2D JavaScript game engine with fast WebGL rendering</li>
 		<li><a href="https://github.com/OttoRobba/ox">ox</a> - tiny 2D game framework for the web</li>
 		<li><a href="https://github.com/Gozala/selfish">Selfish</a> - class-free, pure prototypal inheritance</li>
 		<li><a href="https://github.com/michalbe/mibbu">Mibbu</a> - Javascript game microframework</li>
