--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
 		<li><a href="https://www.youtube.com/watch?v=GKOgm5-GbUA">20 award-winning 13-kilobyte JavaScript games - js13kGames 2020 winners</a> by Ania Kubów for freeCodeCamp</li>
 		<li><a href="https://www.youtube.com/playlist?list=PLYKU1lvSF85fITmDh5Akb_AvQ7mk84SVb">Jupi Plays Indie Games 2021</a> - YouTube playlist for 2021 entries by Jupiter Hadley</li>
 		<li><a href="https://www.youtube.com/playlist?list=PLhL-75WW1siuO5voVWa3qnBhGlZ1aXtf-">Playing js13kGames 2021 game jam entries</a> - YouTube playlist for 2021 entries by Pablo_TescoSpar</li>
+		<li><a href="https://www.twitch.tv/videos/1170593193">js13kGames 2021 - can you build a game with < 13kb?</a> - Michelle Mannering playing some of the 2021 entries on Twitch</li>
 	</ul>
 
 	<h3 id="posts">Blog posts and post mortems</h3>
@@ -426,6 +427,7 @@
 		<li><a href="https://www.techspot.com/news/91246-quake-clone-13-kilobytes-plays-right-browser.html">This Quake clone is just 13 kilobytes and plays right in your browser</a> - by Shawn Knight at TechSpot</li>
 		<li><a href="https://www.quakewiki.net/q1k3-a-javascript-homage-to-quake-in-just-13kb/">Q1K3: a JavaScript homage to Quake in Just 13KB</a> - QuakeWiki</li>
 		<li><a href="https://github.blog/2021-10-05-13-tiny-and-terrific-entries-from-the-js13kgames-competition/">13 tiny and terrific entries from the js13kGames competition</a> - by Lee Reilly at GitHub Blog</li>
+		<li><a href="https://thenewstack.io/hundreds-of-developers-build-tiny-javascript-games-for-js13k/">Hundreds of developers build tiny JavaScript games for JS13K</a> - by David Cassel at The New Stack</li>
 		<li class="posts" id="posts2021"><strong>2021 post-mortems:</strong>
 			<ul>
 				<li><a href="https://github.com/picosonic/js13k-2021-mobile/blob/main/devdiary/diary.md">Crater Space</a> by picosonic (Jasper Renow-Clarke) <a href="https://twitter.com/femtosonic">@femtosonic</a></li>
