I've fixed a broken link and added a new description to it.

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<li><a href="https://github.com/kutuluk/js13k-2d">js13k-2d</a> - a &lt;2kb 2D WebGL renderer, designed for js13k</li>
 		<li><a href="https://github.com/lpagg/floppy">floppy</a> - a micro game engine for beginners</li>
 		<li><a href="https://jabo-bernardo.github.io/jabo-micro-game-engine/">Jabo Micro Game Engine</a> - lightweight and beginner friendly micro game engine</li>
-		<li><a href="https://github.com/swashvirus/craters.js">Craters.js</a> - simple to use hackable framework, compact at ~2kb zipped leaving enough room for game logic</li>
+		<li><a href="https://github.com/swashvirus/craters">Craters</a> - Craters is a modular JavaScript framework reimplemented in TypeScript for rapid HTML5 game development.</li>
 		<li><a href="https://github.com/herebefrogs/gamejam-boilerplate">gamejam-boilerplate</a> - mini boilerplate for 2D canvas games with keyboard/mouse/touch support, live reload &amp; optimized zip build</li>
 		<li><a href="https://github.com/xem/platform-engine">platform-engine</a> - 2D platform engine that handles collisions, slopes, rotations, etc.</li>
 		<li><a href="https://github.com/xem/CSS3Dframework">CSS3Dframework</a> - 1.5kb library to render 3D scenes using CSS3D shapes and sprites, and move the camera</li>
