--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		<li><a href="https://codepen.io/collection/DRMKdB">PetitePatterns</a> - A collection of micro (1/2kb) repeating SVG patterns</li>
 		<li><a href="https://xem.github.io/miniSVGcreator/">Mini SVG Creator</a> - Create tiny SVG images with a mouse and keyboard (ellipses, rectangles, paths with lines, curves, arcs...)</li>
 		<li><a href="https://codepen.io/xem/pen/OoXpmM?editors=1000">SVGenerator</a> - a dynamic SVG generator with custom colors</li>
-		<li><a href="https://https://xem.github.io/CSSprite/">CSSprite</a> - Gather many images/icons into a single PNG file to save hundreds of bytes</li>
+		<li><a href="https://xem.github.io/CSSprite/">CSSprite</a> - Gather many images/icons into a single PNG file to save hundreds of bytes</li>
 		<li><a href="https://xem.github.io/miniPixelArt/">Mini Pixel Art</a> - 8-color pixel-art editor that outputs a JS snippet to render the image on a 2D canvas without using an image file</li>
 		<li><a href="https://xem.github.io/unicode13/shapes-js.html">Unicode13/shapes</a> - a list of all the shapes and emoji present in Unicode 13 (warning, some of them aren't available on all OS's)</li>
 		<li><a href="https://xem.github.io/unicode13/emoji.html">Unicode13/emoji</a> - emoji polyfill (allowed in JS13kGames entries!) to add consistent support for Unicode 13 Emoji across OS's</li>
