--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 		<li><a href="https://github.com/xem/js13k-path">js13k-path</a> - A super short polygon editor and drawer (each new point is encoded on 1 ASCII char)</li>
 		<li><a href="https://xem.github.io/miniPixelFont/js13k.html">Mini pixel font</a> - Generate a pixel-art font with a few lines of JS</li>
 		<li><a href="https://xem.github.io/projects/raycast.html">Raycasting</a> - Render a 3D scene on a 2D canvas from a 2D grid using column-based raycasting</li>
+		<li><a href="https://jsfiddle.net/madmarcel/vwdk76rs/16/">Nice galaxy background</a> - Generate a nice procedural galaxy background with stars</li>
 	</ul>
 
 	<h3 id="mini">Minification</h3>
