add a link for Image Encryptor tool

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 		<li><a href="https://xem.github.io/miniPixelFont/js13k.html">Mini pixel font</a> - Generate a pixel-art font with a few lines of JS</li>
 		<li><a href="https://xem.github.io/projects/raycast.html">Raycasting</a> - Render a 3D scene on a 2D canvas from a 2D grid using column-based raycasting</li>
 		<li><a href="https://jsfiddle.net/madmarcel/vwdk76rs/16/">Nice galaxy background</a> - Generate a nice procedural galaxy background with stars</li>
+		<li><a href="https://www.foumartgames.com/extensions/ImageEncryptor/">Image Encryptor</a> - 8-color pixel-art image encryptor - gives the same output as Mini Pixel Art, but based on images you provide</li>
 	</ul>
 
 	<h3 id="mini">Minification</h3>
