Replace valuable tutorial that was lost to time
This tutorial about web audio is amazing and it would be a shame to lose it forever. Luckily, it's been backed up by the web archive.

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 		<li><a href="https://aframe.io/aframe-school/">A-Frame School</a></li>
 		<li><a href="https://medium.com/web-maker/making-asteroids-with-kontra-js-and-web-maker-95559d39b45f">Making Asteroids with Kontra.js and Web Maker</a> - handy tutorial from Steven Lambert, the author of Kontra.js</li>
 		<li><a href="https://craiky.github.io/tutorial/">Procedurally Generated Dungeon Tutorial</a></li>
-		<li><a href="http://7tonshark.com/2018-09-16-web-audio-part-1/">Creating simple music using the Web Audio API</a></li>
+		<li><a href="http://web.archive.org/web/20200207150744/http://7tonshark.com/2018-09-16-web-audio-part-1">Creating simple music using the Web Audio API</a></li>
 		<li><a href="https://www.creativebloq.com/web-design/master-screen-orientation-html5-101517371">How to master screen orientation with HTML5</a> - 6 technics to detect, react and control screen orientation on mobile devices</li>
 		<li><a href="https://gist.github.com/xem/99930986c5333125a13b0ea50600391f">Trigonometry cheat sheet</a></li>
 		<li><a href="https://xem.github.io/articles/projection.html">3D projection</a> - How to render 3D points / polygons on a 2D canvas</li>
