Add The Neatness blog post

--- a/index.html
+++ b/index.html
@@ -450,6 +450,7 @@
 		<li class="posts" id="posts2022"><strong>2022 post-mortems:</strong>
 			<ul>
 				<li><a href="https://github.com/picosonic/js13k-2022/blob/main/devdiary/diary.md">Bee Kind</a> by picosonic (Jasper Renow-Clarke) <a href="https://twitter.com/femtosonic">@femtosonic</a></li>
+				<li><a href="https://mvasilkov.animuchan.net/the-neatness-js13kgames2022">The Neatness</a> by Mark Vasilkov <a href="https://twitter.com/mvasilkov">@mvasilkov</a></li>
 			</ul>
 		</li>
 	</ul>
