--- a/index.html
+++ b/index.html
@@ -452,6 +452,7 @@
 				<li><a href="https://github.com/picosonic/js13k-2022/blob/main/devdiary/diary.md">Bee Kind</a> by picosonic (Jasper Renow-Clarke) <a href="https://twitter.com/femtosonic">@femtosonic</a></li>
 				<li><a href="https://mvasilkov.animuchan.net/the-neatness-js13kgames2022">The Neatness</a> by Mark Vasilkov <a href="https://twitter.com/mvasilkov">@mvasilkov</a></li>
 				<li><a href="https://roblouie.com/article/949/the-making-of-charon-jr-js13k-postmortem/">Charon Jr.</a> by Rob Louie <a href="https://twitter.com/rob_louie">@rob_louie</a></li>
+				<li><a href="https://eliasku.hashnode.dev/13-game">13</a> by Elias Ku <a href="https://twitter.com/eliaskuvoice">@eliaskuvoice</a></li>
 			</ul>
 		</li>
 	</ul>
