--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
 		<li><a href="https://xem.github.io/int2binary2html/">int2binary2html</a> - helps you to encode a long list of integers (0-255) in binary and embed it in your index.html</li>
 		<li><a href="https://xem.github.io/int2unicode/">Int2Unicode</a> - Convert a list of integers into a JS string</li>
 		<li><a href="https://lifthrasiir.github.io/roadroller/">Roadroller</a> - flattens your JavaScript demo</li>
+		<li><a href="https://github.com/eyaler/ztml">ZTML</a> - Extreme inline text compression for HTML / JS</li>
 	</ul>
 
 	<h3 id="aframe">WebXR resources</h3>
