Add Death Estate post-mortem

--- a/index.html
+++ b/index.html
@@ -454,6 +454,7 @@
 				<li><a href="https://mvasilkov.animuchan.net/the-neatness-js13kgames2022">The Neatness</a> by Mark Vasilkov <a href="https://twitter.com/mvasilkov">@mvasilkov</a></li>
 				<li><a href="https://roblouie.com/article/949/the-making-of-charon-jr-js13k-postmortem/">Charon Jr.</a> by Rob Louie <a href="https://twitter.com/rob_louie">@rob_louie</a></li>
 				<li><a href="https://eliasku.hashnode.dev/13-game">13</a> by Elias Ku <a href="https://twitter.com/eliaskuvoice">@eliaskuvoice</a></li>
+				<li><a href="https://medium.com/@jayther/death-estate-js13k-2022-postmortem-863bfc0af423">Death Estate</a> by jayther (J'Brian) <a href="https://twitter.com/jayther">@jayther</a></li>
 			</ul>
 		</li>
 	</ul>
