--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<nav>
 		<a href="https://js13kgames.com">js13kGames</a>
 		<ul>
-			<li><a href="https://js13kgames.com">2021</a></li>
+			<li><a href="https://2021.js13kgames.com">2021</a></li>
 			<li><a href="https://2020.js13kgames.com">2020</a></li>
 			<li><a href="https://2019.js13kgames.com">2019</a></li>
 			<li><a href="https://2018.js13kgames.com">2018</a></li>
