Add missing <html> lang attribute and a direct edit link to the intro.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<title>js13kGames Resources</title>
@@ -44,8 +44,10 @@
 	<h1>js13kGames Resources</h1>
 	<p>
 		List of useful tools, materials, and tutorials for creating a js13kGames entry, and post-mortems from already created games. The items are in no particular order.
-		Please feel free to <strong>suggest additions or edits</strong> to the list either by <a href="https://github.com/js13kgames/resources/pulls">sending
-		a pull request</a> on GitHub or emailing them to <a href="mailto:contact@js13kgames.com">contact@js13kgames.com</a>.
+		Please feel free to <strong>suggest additions or edits</strong> to the list either by
+		<a href="//github.com/js13kGames/resources/edit/gh-pages/index.html">editing this file</a> directly,
+		<a href="//github.com/js13kgames/resources/pulls">sending a pull request</a> on GitHub, or emailing them to
+		<a href="mailto:contact@js13kgames.com">contact@js13kgames.com</a>.
 	</p>
 
 	<h3 id="engine">Micro game engines and boilerplates</h3>
