--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
 		<li><a href="//xem.github.io/int2unicode">Int2Unicode</a> - Convert a list of integers into a JS string</li>
 		<li><a href="//lifthrasiir.github.io/roadroller">Roadroller</a> - flattens your JavaScript demo</li>
 		<li><a href="//github.com/eyaler/ztml">ZTML</a> - Extreme inline text compression for HTML / JS</li>
+		<li><a href="//github.com/SalvatorePreviti/spglsl">spglsl</a> - advanced glsl (webgl1 and webgl2) minifier, runs in nodejs. Supports rollup, vite.</li>
 	</ul>
 
 	<h3 id="aframe">WebXR resources</h3>
