Updates: * Added links to my TypeScript starter projects. One has built-in support for WebGL, the other uses regular 2d canvas.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 		<li><a href="//twitter.com/MaximeEuziere/status/1157563570823081984">MiniDragAndDrop</a> - a DOM-based, easy-to-use drag&amp;drop library for desktop and mobile browsers (1/2kb zipped)</li>
 		<li><a href="//github.com/xem/miniIK">MiniIK</a> - a tiny Inverse Kinematics example</li>
 		<li><a href="//github.com/xem/responsiveTouchGameFramework">responsiveTouchGameFramework</a> - responsive canvas game framework with unified mouse / touch inputs</li>
-
+		<li><a href="https://github.com/roblouie/js13k-typescript-starter">TypeScript Starter</a> - Powerful and easy to use Vite-based build process that minifies then compresses with RoadRoller and ECT.</li>
+		<li><a href="https://github.com/roblouie/js13k-typescript-starter-webgl">WebGL TypeScript Starter</a> - Same as above but adds automatic shader minification.</li>
 </ul>
 
 	<h3 id="sfx">Sound and music</h3>
