Added the other jsfxr: <sfxr.me>.

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
 	<ul>
 		<li><a href="//sb.bitsnbites.eu">SoundBox</a> - an HTML5 synth music tracker</li>
 		<li><a href="//github.com/mneubrand/jsfxr">jsfxr</a> - <a href="http://www.superflashbros.net/as3sfxr">as3sfxr</a> synth port to JavaScript</li>
+		<li><a href="//sfxr.me">jsfxr</a> - the other <a href="http://www.superflashbros.net/as3sfxr">as3sfxr</a> synth port to JavaScript with a JS playback library</li>
 		<li><a href="//codepen.io/jackrugile/blog/arcade-audio-for-js13k-games">Arcade audio for js13kGames</a> - blog post about generating your own sound effects</li>
 		<li><a href="//github.com/nicolas-van/sonant-x">Sonant-X</a> - small JavaScript synthesizer library</li>
 		<li><a href="http://www.cappel-nord.de/webaudio">Web Audio API prototypes</a> - demos using the Web Audio API to synthesize audio in the browser</li>
