docs: add Twitter handle to hang by a thread post mortem

--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 				<li><a href="//medium.com/@herebefrogs/stand-by-me-a-js13kgames-2022-post-mortem-f14edb0d3304">Stand By Me</a> by Jerome Lecomte (<a href="//twitter.com/herebefrogs">@herebefrogs</a>)</li>
 				<li><a href="//github.com/SalvatorePreviti/js13k-2022/blob/main/post-mortem.md">Dante</a> by Salvatore Previti <a href="//twitter.com/SN74HC00">@SN74HC00</a></li>
 				<li><a href="//danthedev.com/norman-the-necromancer/">Norman the Necromancer</a> by Dan Prince</li>
-				<li><a href="//reitgames.com/news/hang-by-a-thread-post-mortem">Hang by a Thread</a> by John Edvard</li>
+				<li><a href="//reitgames.com/news/hang-by-a-thread-post-mortem">Hang by a Thread</a> by John Edvard <a href="//twitter.com/reitgames">@ReitGames</a></li>
 			</ul>
 		</li>
 	</ul>
