--- a/index.html
+++ b/index.html
@@ -477,6 +477,11 @@
 				<li><a href="//timmykokke.com/blog/2022-09-14-js13kgames-postmortem/">Deathkeeper</a> by Timmy Kokke <a href="//twitter.com/sorskoot">@Sorskoot</a></li>
 			</ul>
 		</li>
+		<li class="posts" id="posts2023"><strong>2023 post-mortems:</strong>
+			<ul>
+				<li>(add yours here)</li>
+			</ul>
+		</li>
 	</ul>
 
 	<a class="fork page" href="//github.com/js13kgames/resources" title="Fork me on GitHub"></a>
