--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
 		</li>
 		<li class="posts" id="posts2023"><strong>2023 post-mortems:</strong>
 			<ul>
-				<li>(add yours here)</li>
+				<li><a href="//dev.to/jacklehamster/the-terror-of-mongolia-js13k-post-mortem-part-1-33a4">The Terror of Mongolia<a/> by Jack Le Hamster <a href="//twitter.com/jacklehamster">@JackLeHamster</a></li>
 			</ul>
 		</li>
 	</ul>
