--- a/index.html
+++ b/index.html
@@ -480,6 +480,7 @@
 		<li class="posts" id="posts2023"><strong>2023 post-mortems:</strong>
 			<ul>
 				<li>The Terror of Mongolia [<a href="//dev.to/jacklehamster/the-terror-of-mongolia-js13k-post-mortem-part-1-33a4">Part 1</a>][<a href="https://dev.to/jacklehamster/the-terror-of-mongolia-js13k-post-mortem-part-2-3ell">Part 2</a>] by Jack Le Hamster <a href="//twitter.com/jacklehamster">@JackLeHamster</a></li>
+				<li><a href="//reitgames.com/news/samurai-sam-port-mortem">Slicing with Samurai Sam, a js13kgames entry</a> by John Edvard <a href="//twitter.com/reitgames">@ReitGames</a></li>
 			</ul>
 		</li>
 	</ul>
