--- a/index.html
+++ b/index.html
@@ -482,6 +482,7 @@
 				<li>The Terror of Mongolia [<a href="//dev.to/jacklehamster/the-terror-of-mongolia-js13k-post-mortem-part-1-33a4">Part 1</a>][<a href="https://dev.to/jacklehamster/the-terror-of-mongolia-js13k-post-mortem-part-2-3ell">Part 2</a>] by Jack Le Hamster <a href="//twitter.com/jacklehamster">@JackLeHamster</a></li>
 				<li><a href="//reitgames.com/news/samurai-sam-port-mortem">Slicing with Samurai Sam, a js13kgames entry</a> by John Edvard <a href="//twitter.com/reitgames">@ReitGames</a></li>
 				<li><a href="//github.com/picosonic/js13k-2023/blob/main/devdiary/diary.md">Princess of Corinium</a> by picosonic (Jasper Renow-Clarke) <a href="//twitter.com/femtosonic">@femtosonic</a></li>
+				<li><a href="//github.com/Antix-Development/when_mongols_are_your_neighbors/blob/master/POST-MORTEM.md">When Your Neighbors Are Mongols</a> by Antix Development (Cliff Earl) <a href="//github.com/Antix-Development">Antix Development</a></li>
 			</ul>
 		</li>
 	</ul>
