--- a/index.html
+++ b/index.html
@@ -378,10 +378,10 @@
 				<li><a href="//auroriax.com/js13kgames-back-to-the-basics">BackFlipped: Back to the Basics</a> by Tom Hermans (@Auroriax)</li>
 				<li><a href="//medium.com/@niklas.b3rg/game-dev-postmortem-backstabber-hero-part-1-80c7def92c74">Backstabber Hero (Part 1 - Sources of inspiration)</a> by Niklas Berg (@nkholski)</li>
 				<li><a href="//xem.github.io/articles/js13k19.html">Back on Track (mania)</a> by xem</li>
-				<li><a href="//dev.to/mrlopis/how-to-design-a-javascript-game-in-13kb-or-less-59kn">How to design a javascript game? (in 13KB or less)</a> by Joao Lopes (@mrlopis)</li>
+				<li><a href="//dev.to/mrlopis/how-to-design-a-javascript-game-in-13kb-or-less-59kn">How to design a javascript game? (in 13KB or less)</a> by Joao Lopes <a href="//github.com/lopis">lopis</a></li>
 				<li><a href="//github.com/DennisBengs/retrohaunt/tree/master/postmortem">Retrohaunt</a> by Donitz</li>
 				<li><a href="//medium.com/@alexc73/i-made-a-video-game-on-my-journey-to-work-8e1bf2dfd208">Back from Kooky Island</a> by Alexander Curtis</li>
-				<li><a href="//dev.to/mrlopis/creating-a-13kb-js-game-using-svg-5fjk">Creating a 13KB JS Game using SVG</a> by Joao Lopes (@mrlopis)</li>
+				<li><a href="//dev.to/mrlopis/creating-a-13kb-js-game-using-svg-5fjk">Creating a 13KB JS Game using SVG</a> by Joao Lopes <a href="//github.com/lopis">lopis</a></li>
 				<li><a href="//medium.com/@etchells.kevin/js13k-games-2019-entry-get-back-from-robot-city-22a48afe5fe">Get Back From Robot City</a> by Kev Etchells</li>
 				<li><a href="//github.com/picosonic/js13k-2019/blob/master/devdiary/diary.md">BACKSPACE - Return to planet Figadore</a> by picosonic (Jasper Renow-Clarke) (@femtosonic)</li>
 				<li><a href="//github.com/amolinasalazar/LightsBackOn/blob/master/README.md">Lights Back On</a> by Alejandro Molina (@amolinasalazar)</li>
@@ -483,6 +483,7 @@
 				<li><a href="//reitgames.com/news/samurai-sam-port-mortem">Slicing with Samurai Sam, a js13kgames entry</a> by John Edvard <a href="//twitter.com/reitgames">@ReitGames</a></li>
 				<li><a href="//github.com/picosonic/js13k-2023/blob/main/devdiary/diary.md">Princess of Corinium</a> by picosonic (Jasper Renow-Clarke) <a href="//twitter.com/femtosonic">@femtosonic</a></li>
 				<li><a href="//github.com/Antix-Development/when_mongols_are_your_neighbors/blob/master/POST-MORTEM.md">When Your Neighbors Are Mongols</a> by Antix Development (Cliff Earl) <a href="//github.com/Antix-Development">Antix Development</a></li>
+				<li><a href="//dev.to/mrlopis/a-tiny-pixel-art-game-using-no-images-49df">A tiny pixel art game using no images</a> by João Lopes <a href="//github.com/lopis">lopis</a></li>
 			</ul>
 		</li>
 	</ul>
