Add link to 2022 comp page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<nav>
 		<a href="//js13kgames.com">js13kGames</a>
 		<ul>
+			<li><a href="//2022.js13kgames.com">2022</a></li>
 			<li><a href="//2021.js13kgames.com">2021</a></li>
 			<li><a href="//2020.js13kgames.com">2020</a></li>
 			<li><a href="//2019.js13kgames.com">2019</a></li>
