--- a/index.html
+++ b/index.html
@@ -491,6 +491,7 @@
 				<li><a href="//github.com/csubagio/js13k-robin">Robin of Thirteensley</a> by Chris Subagio</a></li>
 				<li><a href="//github.com/HomerDilpleu/CathedralBuilder/blob/main/postMortem/postMortem.md">Cathedral builder</a> by Homer Dilpleu <a href="//github.com/HomerDilpleu">HomerDilpleu</a></li>
 				<li><a href="//mvasilkov.animuchan.net/super-castle-game-js13kgames2023">Super Castle Game</a> by Mark Vasilkov <a href="//twitter.com/mvasilkov">@mvasilkov</a></li>
+				<li><a href="//github.com/ArmaanMoh/Age-of-The-Demigods/blob/main/Post-Mortem.md">Age of the Demigods</a> by ArmaanM (Armaan Mohammed) <a href="//twitter.com/ArmaanM_GameDev">@ArmaanM_GameDev</a></li>
 			</ul>
 		</li>
 	</ul>
