--- a/index.html
+++ b/index.html
@@ -493,6 +493,7 @@
 				<li><a href="//mvasilkov.animuchan.net/super-castle-game-js13kgames2023">Super Castle Game</a> by Mark Vasilkov <a href="//twitter.com/mvasilkov">@mvasilkov</a></li>
 				<li><a href="//github.com/ArmaanMoh/Age-of-The-Demigods/blob/main/Post-Mortem.md">Age of the Demigods</a> by ArmaanM (Armaan Mohammed) <a href="//twitter.com/ArmaanM_GameDev">@ArmaanM_GameDev</a></li>
 		                <li><a href="//7tonshark.com/posts/making-of-js13k-2023-harold-is-heavy">Harold is Heavy</a> by Elliot Nelson <a href="//twitter.com/7tonshark">@7tonshark</a></li>
+				<li><a href="//swashvirus.github.io/trench-fisher/POSTMORTEM">Trench fisher</a> by John Swana <a href="//twitter.com/swashjunior">@swashjunior</a></li>
 			</ul>
 		</li>
 	</ul>
