--- a/index.html
+++ b/index.html
@@ -497,6 +497,7 @@
 				<li><a href="//github.com/misabitencourt/death-sea-xiii/blob/master/POST_MORTEM.md">Death Sea XIII</a> by Misael Braga <a href="//github.com/misabitencourt">ms_bit</a></li>
 				<li><a href="//github.com/wololoa/js13k2023/blob/main/postmortem.md">FEAST NIGHT</a> by Almar <a href="//twitter.com/repunkgame">@repunkgame</a></li>
 				<li><a href="//github.com/mhmdjawad/robinhoodgame/blob/main/README.md">Robin Hood</a> by Mhmd Jawad <a href="//github.com/mhmdjawad">mhmdjawad</a></li>
+				<li><a href="//eoinmcgrath.com/pages/postmortem-bewitched.html">Bewitched!</a> by Eoin McGrath <a href="//twitter.com/eoinmcg">@eoinmcg</a></li>
 			</ul>
 		</li>
 	</ul>
