--- a/index.html
+++ b/index.html
@@ -498,6 +498,7 @@
 				<li><a href="//github.com/wololoa/js13k2023/blob/main/postmortem.md">FEAST NIGHT</a> by Almar <a href="//twitter.com/repunkgame">@repunkgame</a></li>
 				<li><a href="//github.com/mhmdjawad/robinhoodgame/blob/main/README.md">Robin Hood</a> by Mhmd Jawad <a href="//github.com/mhmdjawad">mhmdjawad</a></li>
 				<li><a href="//eoinmcgrath.com/pages/postmortem-bewitched.html">Bewitched!</a> by Eoin McGrath <a href="//twitter.com/eoinmcg">@eoinmcg</a></li>
+				<li><a href="//niklever.com/js13kgame-competition-2023-diary/">Sir Coadalot and the Holy Grail</a> by Nik Lever <a href="//twitter.com/niklever">@niklever</a></li>
 			</ul>
 		</li>
 	</ul>
