--- a/index.html
+++ b/index.html
@@ -499,6 +499,7 @@
 				<li><a href="//github.com/mhmdjawad/robinhoodgame/blob/main/README.md">Robin Hood</a> by Mhmd Jawad <a href="//github.com/mhmdjawad">mhmdjawad</a></li>
 				<li><a href="//eoinmcgrath.com/pages/postmortem-bewitched.html">Bewitched!</a> by Eoin McGrath <a href="//twitter.com/eoinmcg">@eoinmcg</a></li>
 				<li><a href="//niklever.com/js13kgame-competition-2023-diary/">Sir Coadalot and the Holy Grail</a> by Nik Lever <a href="//twitter.com/niklever">@niklever</a></li>
+				<li><a href="//hambley.me.uk/blog/goforthandconquer">Go Forth and Conquer</a> by Brian Hambley <a href="//twitter.com/BrianHambo3">@BrianHambo3</a></li>
 			</ul>
 		</li>
 	</ul>
