Add Jurassic Nursery postmortem

--- a/index.html
+++ b/index.html
@@ -502,6 +502,7 @@
 				<li><a href="//niklever.com/js13kgame-competition-2023-diary/">Sir Coadalot and the Holy Grail</a> by Nik Lever <a href="//twitter.com/niklever">@niklever</a></li>
 				<li><a href="//hambley.me.uk/blog/goforthandconquer">Go Forth and Conquer</a> by Brian Hambley <a href="//twitter.com/BrianHambo3">@BrianHambo3</a></li>
 				<li><a href="//leokuo0724.medium.com/mongol-march-navigating-the-js13k-challenge-658693d53a44">Mongol March</a> by Leo Kuo <a href="//twitter.com/leokuo0724">@leokuo0724</a></li>
+                                <li><a href="//github.com/Platane/jurassic-nursery/blob/master/doc/postmortem/index.md">Jurassic Nursery</a> by platane <a href="//twitter.com/platane_">@platane_</a></li>
 			</ul>
 		</li>
 	</ul>
