--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 		<li><a href="//xem.github.io/projects/raycast.html">Raycasting</a> - Render a 3D scene on a 2D canvas from a 2D grid using column-based raycasting</li>
 		<li><a href="//jsfiddle.net/madmarcel/vwdk76rs/16">Nice galaxy background</a> - Generate a nice procedural galaxy background with stars</li>
 		<li><a href="//foumartgames.com/extensions/ImageEncryptor">Image Encryptor</a> - 8-color pixel-art image encryptor - gives the same output as Mini Pixel Art, but based on images you provide</li>
+		<li><a href="//lopis.github.io/mini-pixelart-editor/">Mini Pixelart Editor</a> - multi-project 8-color pixel-art editor, remembers your palette and generates encrypted image strings and rendering code</li>
 	</ul>
 
 	<h3 id="mini">Minification</h3>
