Added post mortems for Path to Glory and Ninja vs EVILCORP

--- a/index.html
+++ b/index.html
@@ -437,6 +437,7 @@
 				<li><a href="//medium.com/@herebefrogs/highway-404-a-js13kgames-2020-post-mortem-89f94dedef03">Highway 404</a> - a post-mortem by Jerome Lecomte (<a href="//twitter.com/herebefrogs">@herebefrogs</a>)</li>
 				<li><a href="//dev.to/serpent7776/using-jsofocaml-to-write-game-in-13k-for-js13k-game-jam-3653">Using js_of_ocaml to write game in 13k for js13k game jam</a> - by Serpent7776</li>
 				<li><a href="//github.com/jaammees/exit">Exit postmortem</a> (webxr category) - by <a href="//twitter.com/uniquename654">James</a></li>
+				<li><a href="//remvst.medium.com/ninja-vs-evilcorp-postmortem-ceaa4ca96a83">Ninja vs EVILCORP</a> by Rémi Vansteelandt <a href="//twitter.com/remvst">@remvst</a></li>
 			</ul>
 		</li>
 		<li><a href="//kotaku.com/wow-this-quake-clone-is-smaller-than-a-word-doc-1847668782">Wow, this Quake clone is smaller than a Word doc</a> - by Zack Zwiezen at Kotaku</li>
@@ -504,6 +505,7 @@
 				<li><a href="//hambley.me.uk/blog/goforthandconquer">Go Forth and Conquer</a> by Brian Hambley <a href="//twitter.com/BrianHambo3">@BrianHambo3</a></li>
 				<li><a href="//leokuo0724.medium.com/mongol-march-navigating-the-js13k-challenge-658693d53a44">Mongol March</a> by Leo Kuo <a href="//twitter.com/leokuo0724">@leokuo0724</a></li>
                                 <li><a href="//github.com/Platane/jurassic-nursery/blob/master/doc/postmortem/index.md">Jurassic Nursery</a> by platane <a href="//twitter.com/platane_">@platane_</a></li>
+                                <li><a href="//remvst.medium.com/path-to-glory-post-mortem-js13k-2023-be74a5272621">Path to Glory</a> by Rémi Vansteelandt <a href="//twitter.com/remvst">@remvst</a></li>
 			</ul>
 		</li>
 	</ul>
