added postmortem for witchcup1276

--- a/index.html
+++ b/index.html
@@ -506,6 +506,7 @@
 				<li><a href="//leokuo0724.medium.com/mongol-march-navigating-the-js13k-challenge-658693d53a44">Mongol March</a> by Leo Kuo <a href="//twitter.com/leokuo0724">@leokuo0724</a></li>
                                 <li><a href="//github.com/Platane/jurassic-nursery/blob/master/doc/postmortem/index.md">Jurassic Nursery</a> by platane <a href="//twitter.com/platane_">@platane_</a></li>
                                 <li><a href="//remvst.medium.com/path-to-glory-post-mortem-js13k-2023-be74a5272621">Path to Glory</a> by Rémi Vansteelandt <a href="//twitter.com/remvst">@remvst</a></li>
+                                <li><a href="//github.com/DerBenniBanni/js13k2023_witch_racing/blob/main/postmortem/README.md">WitchCup1276</a> by Christoph Schansky <a href="//twitter.com/DerBenniBanni">@DerBenniBanni</a></li>
 			</ul>
 		</li>
 	</ul>
