--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
 		<li><a href="//www.youtube.com/playlist?list=PLYKU1lvSF85fITmDh5Akb_AvQ7mk84SVb">Jupi Plays Indie Games 2021</a> - YouTube playlist for 2021 entries by Jupiter Hadley</li>
 		<li><a href="//www.youtube.com/playlist?list=PLhL-75WW1siuO5voVWa3qnBhGlZ1aXtf-">Playing js13kGames 2021 game jam entries</a> - YouTube playlist for 2021 entries by Pablo_TescoSpar</li>
 		<li><a href="//www.twitch.tv/videos/1170593193">js13kGames 2021 - can you build a game with < 13kb?</a> - Michelle Mannering playing some of the 2021 entries on Twitch</li>
+		<li><a href="https://www.youtube.com/watch?v=4F7qVz-zLR8">Compiled 13s clips from each js13kgames 2023 entries - YouTube video by Dobuki Gamer</a></li>
 	</ul>
 
 	<h3 id="posts">Blog posts and post mortems</h3>
