--- a/index.html
+++ b/index.html
@@ -508,6 +508,7 @@
                                 <li><a href="//github.com/Platane/jurassic-nursery/blob/master/doc/postmortem/index.md">Jurassic Nursery</a> by platane <a href="//twitter.com/platane_">@platane_</a></li>
                                 <li><a href="//remvst.medium.com/path-to-glory-post-mortem-js13k-2023-be74a5272621">Path to Glory</a> by Rémi Vansteelandt <a href="//twitter.com/remvst">@remvst</a></li>
                                 <li><a href="//github.com/DerBenniBanni/js13k2023_witch_racing/blob/main/postmortem/README.md">WitchCup1276</a> by Christoph Schansky <a href="//twitter.com/DerBenniBanni">@DerBenniBanni</a></li>
+			        <li><a href="https://blog.cassidoo.co/post/thirteen-potions/">Thirteen Potions</a> by Cassidy <a href="//twitter.com/cassidoo">@cassidoo</a></li>
 			</ul>
 		</li>
 	</ul>
