--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 		<li><a href="//github.com/xem/responsiveTouchGameFramework">responsiveTouchGameFramework</a> - responsive canvas game framework with unified mouse / touch inputs</li>
 		<li><a href="https://github.com/roblouie/js13k-typescript-starter">TypeScript Starter</a> - Powerful and easy to use Vite-based build process that minifies then compresses with RoadRoller and ECT.</li>
 		<li><a href="https://github.com/roblouie/js13k-typescript-starter-webgl">WebGL TypeScript Starter</a> - Same as above but adds automatic shader minification.</li>
+		<li><a href="https://github.com/litecanvas/game-engine">litecanvas</a> - 4kb canvas game engine for small games.</li>
 </ul>
 
 	<h3 id="sfx">Sound and music</h3>
