Add PWA starter pack

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 		<li><a href="https://github.com/roblouie/js13k-typescript-starter">TypeScript Starter</a> - Powerful and easy to use Vite-based build process that minifies then compresses with RoadRoller and ECT.</li>
 		<li><a href="https://github.com/roblouie/js13k-typescript-starter-webgl">WebGL TypeScript Starter</a> - Same as above but adds automatic shader minification.</li>
 		<li><a href="https://github.com/litecanvas/game-engine">litecanvas</a> - 4kb canvas game engine for small games.</li>
+		<li><a href="https://github.com/foumart/JS.13kGames">PWA starter pack</a> - Progressive Web App Template with included Service Worker. Gulp-powered build with Roadroller and BrowserSync.</li>
 </ul>
 
 	<h3 id="sfx">Sound and music</h3>
