bacionejs code editor for phone offline

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 		<li><a href="//github.com/xem/miniKeyCode#readme">Mini KeyCode</a> - Find the keyCode of any keyboard key</li>
 		<li><a href="//xem.github.io/miniURI">Mini URI</a> - Convert assets (sound, image, ...) in Base64. You may save hundreds of bytes by embedding them in your index.html</li>
 		<li><a href="//xem.github.io/hex">Mini Hex</a> - A mini Hexadecimal viewer/editor</li>
+		<li><a href="//github.com/bacionejs/editor">Bacionejs</a> - edit JavaScript code on phone offline</li>
 	</ul>
 
 	<h3 id="tuts">Tutorials</h3>
