Added Space Huggers post-mortem

--- a/index.html
+++ b/index.html
@@ -451,6 +451,7 @@
 		<li><a href="//thenewstack.io/hundreds-of-developers-build-tiny-javascript-games-for-js13k">Hundreds of developers build tiny JavaScript games for JS13K</a> - by David Cassel at The New Stack</li>
 		<li class="posts" id="posts2021"><strong>2021 post-mortems:</strong>
 			<ul>
+				<li><a href="//frankforce.com/space-huggers-how-i-made-a-game-in-13-kilobytes">Space Huggers</a> by KilledByAPixel (Frank Force)<a href="//twitter.com/KilledByAPixel">@KilledByAPixel</a></li>
 				<li><a href="//github.com/picosonic/js13k-2021-mobile/blob/main/devdiary/diary.md">Crater Space</a> by picosonic (Jasper Renow-Clarke) <a href="//twitter.com/femtosonic">@femtosonic</a></li>
 				<li><a href="//github.com/picosonic/js13k-2021/blob/main/devdiary/diary.md">Airspace Alpha Zulu</a> by picosonic (Jasper Renow-Clarke) <a href="//twitter.com/femtosonic">@femtosonic</a></li>
 				<li><a href="//github.com/elliot-nelson/js13k-2021-keening-star/blob/main/README.md#post-mortem">Shadow of the Keening Star</a> by Elliot Nelson <a href="//twitter.com/7tonshark">@7tonshark</a></li>
