--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
 		<li><a href="https://github.com/roblouie/js13k-typescript-starter-webgl">WebGL TypeScript Starter</a> - Same as above but adds automatic shader minification.</li>
 		<li><a href="https://github.com/litecanvas/game-engine">litecanvas</a> - 4kb canvas game engine for small games.</li>
 		<li><a href="https://github.com/foumart/JS.13kGames">PWA starter pack</a> - Progressive Web App Template with included Service Worker. Gulp-powered build with Roadroller and BrowserSync.</li>
+		<li><a href="//xem.github.io/W">W</a> - a 3kb WebGL framework with tons of features</li>
+		<li><a href="//xem.github.io/microW">microW</a> - a very simple 1kb Webgl scene renderer with cool features too</li>
 </ul>
 
 	<h3 id="sfx">Sound and music</h3>
@@ -152,6 +154,7 @@
 		<li><a href="//jsfiddle.net/madmarcel/vwdk76rs/16">Nice galaxy background</a> - Generate a nice procedural galaxy background with stars</li>
 		<li><a href="//foumartgames.com/extensions/ImageEncryptor">Image Encryptor</a> - 8-color pixel-art image encryptor - gives the same output as Mini Pixel Art, but based on images you provide</li>
 		<li><a href="//lopis.github.io/mini-pixelart-editor/">Mini Pixelart Editor</a> - multi-project 8-color pixel-art editor, remembers your palette and generates encrypted image strings and rendering code</li>
+		<li><a href="//xem.github.io/pxtex">pxtex</a> - tiny random pixelized image generator</li>
 	</ul>
 
 	<h3 id="mini">Minification</h3>
