Add meta refresh and canonical link to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<title>js13kGames Resources</title>
 	<meta name="author" content="end3r">
 	<meta name="description" content="List of useful tools, materials, and tutorials for creating a js13kGames entry, and post-mortems from already created games." />
+	<meta http-equiv="refresh" content="0; URL=https://js13kgames.com/resources" />
 	<meta name="monetization" content="$ilp.uphold.com/k4eJGQUDF9nw" />
+	<link rel="canonical" href="https://js13kgames.com/resources" />
 	<link rel="shortcut icon" href="favicon.png">
 	<link rel="stylesheet" href="style.css">
 	<link href="//fonts.googleapis.com/css?family=Graduate" rel="stylesheet">
